--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background: url('assets/bg.png');
+  background: url('assets/background.jpg');
   background-repeat: repeat;
   background-size: cover;
   min-height: 100vh;
@@ -11,7 +11,6 @@
   border: 2px #4283a9 solid;
   padding: 16px;
   max-width: 600px;
-  margin: 10% auto;
 }
 
 .Header {
@@ -19,6 +18,12 @@
   justify-content: space-between;
   width: 100%;
   flex-wrap: wrap;
+  margin-bottom: 75%;
+}
+.Header a {
+    color: white;
+    padding: 24px;
+    font-weight: 700;
 }
 
 .Toto {
@@ -28,6 +33,30 @@
   background-size: 50px 50px;
   min-width: 200px;
   min-height: 50px;
+}
+
+.DownloadsWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.LoadingWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.LoadingCat {
+  width: 20%;
+  margin: 0 40%;
+  padding: 24px;
+}
+.LoadingText {
+  background: #3077b5a3;
+  color: white;
+  padding: 8px;
+  border: 3px solid #00ff20b3;
+  border-radius: 2px;
 }
 
 .logo {
