--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,6 +40,16 @@
   justify-content: center;
   align-items: center;
 }
+.NoDownloads{
+  background: #3077b5a3;
+  color: white;
+  padding: 8px;
+  border: 3px solid #00ff20b3;
+  border-radius: 2px;
+  box-sizing: border-box;
+  width: 80%;
+  margin: 10%;
+}
 
 .LoadingWrapper {
   display: flex;
